--- a/web_service/templates/includes/header/language_button.j2
+++ b/web_service/templates/includes/header/language_button.j2
@@ -6,5 +6,5 @@
         <input name="language" type="hidden" value="{{ language[0] }}">
       {% endif %}
   {% endfor %}
-  <input type="submit" value="{{ LANGUAGE_CODE.upper() }}">
+  <input class="header__btn btn-reset" type="submit" value="{{ LANGUAGE_CODE.upper() }}">
 </form>
