--- a/web_service/templates/includes/home/ru_home_page_text.html
+++ b/web_service/templates/includes/home/ru_home_page_text.html
@@ -1,35 +1,31 @@
-<br>
-Найдём оптимальный способ погашения долга
-<br>
-Мы уверены, что посредством диалога легче найти оптимальное решение Вашей финансовой ситуации. Вы сами решаете, как, когда и сколько Вы вкладываете в погашение обязательств. Главное – довериться нам.
-<br>
-<br>
-
-Коротко о нас
-<br>
-ООО "Коллекторское Бюро "Маршал", созданное профессионалами в области взыскания просроченной задолженности и использует лучшие практики взыскания от мировых лидеров на основе изучения многолетнего опыта в данной отрасли.
-Работа бюро охватывает весь комплекс услуг в рамках полного цикла работы с взысканием проблемной задолженности, от предупреждения просроченной задолженности до исполнительного производства.
-ООО "Коллекторское Бюро "Маршал" стремится стать показательным примером цивилизованного урегулирования ситуаций просроченной задолженности.
-Мы восстанавливаем баланс интересов всех участников финансовой системы - стараемся решить вопрос просроченной задолженности с наибольшей прибылью для кредитора и с наименьшими потерями для должника. Наши специалисты финансового обслуживания постоянно помогают потребителям разрешить их проблемы и восстановить доверие кредиторов.
-Наша работа ведется исключительно в рамках правового поля России.
-<br>
-<br>
-
-Наши услуги
-<ul>
-  <li>Досудебное урегулирование</li>
-  <li>Исковое производство</li>
-  <li>Представление интересов на стадии банкротства</li>
-  <li>Приказное производство</li>
-</ul>
-<br>
-<br>
-
-Почему именно мы?
-<br>
-Почему стоит обратиться в ООО "Коллекторское Бюро "Маршал"
-<ul>
-<li>Гарантия соблюдения законодательства рф при взыскании долгов</li>
-<li>Безопасность и конфиденциальность при обращении и на протяжении всего цикла работы</li>
-<li>Только профессиональные опытные сотрудники</li>
-</ul>
+<div class="home-content">
+  <h2 class="home-title">
+  Найдём оптимальный способ погашения долга
+  </h2>
+  <p class="home-descr">Мы уверены, что посредством диалога легче найти оптимальное решение Вашей финансовой ситуации. Вы сами решаете, как, когда и сколько Вы вкладываете в погашение обязательств. Главное – довериться нам.
+  </p>
+  <h3 class="home-subtitle">Коротко о нас</h3>
+  <p class="home-descr">
+  ООО "Коллекторское Бюро "Маршал", созданное профессионалами в области взыскания просроченной задолженности и использует лучшие практики взыскания от мировых лидеров на основе изучения многолетнего опыта в данной отрасли.
+  </p>
+  <p class="home-descr">Работа бюро охватывает весь комплекс услуг в рамках полного цикла работы с взысканием проблемной задолженности, от предупреждения просроченной задолженности до исполнительного производства.</p>
+  <p class="home-descr">ООО "Коллекторское Бюро "Маршал" стремится стать показательным примером цивилизованного урегулирования ситуаций просроченной задолженности.</p>
+  <p class="home-descr">Мы восстанавливаем баланс интересов всех участников финансовой системы - стараемся решить вопрос просроченной задолженности с наибольшей прибылью для кредитора и с наименьшими потерями для должника. Наши специалисты финансового обслуживания постоянно помогают потребителям разрешить их проблемы и восстановить доверие кредиторов.
+  </p>
+  <p class="home-descr">Наша работа ведется исключительно в рамках правового поля России.
+  </p>
+  <h3 class="home-subtitle">Наши услуги</h3>
+  <ul class="home-list">
+    <li class="home-item">Досудебное урегулирование</li>
+    <li class="home-item">Исковое производство</li>
+    <li class="home-item">Представление интересов на стадии банкротства</li>
+    <li class="home-item">Приказное производство</li>
+  </ul>
+  <h3 class="home-subtitle">Почему именно мы?</h3>
+  <p class="home-descr">Почему стоит обратиться в ООО "Коллекторское Бюро "Маршал"</p>
+  <ul class="home-list-2">
+    <li class="home-item-2">Гарантия соблюдения законодательства рф при взыскании долгов</li>
+    <li class="home-item-2">Безопасность и конфиденциальность при обращении и на протяжении всего цикла работы</li>
+    <li class="home-item-2">Только профессиональные опытные сотрудники</li>
+  </ul>
+</div>
