--- a/web_service/templates/base.j2
+++ b/web_service/templates/base.j2
@@ -20,12 +20,14 @@
       </header>
 
       <main>
+        {% block upcontent %}
           <section class="base">
               <div class="container">
                   {% block content %}
                   {% endblock %}
               </div>
           </section>
+        {% endblock %}
       </main>
 
       <footer class="Footer">
