--- a/web_service/templates/includes/footer/privacy_policy.j2
+++ b/web_service/templates/includes/footer/privacy_policy.j2
@@ -1,6 +1,6 @@
 {% extends 'base.j2' %}
 
-{% block content %}
+{% block upcontent %}
   {% if LANGUAGE_CODE == 'ru' %}
     {% include 'includes/privacy_policy/ru_privacy_policy.html' %}
   {% else %}
