--- a/web_service/templates/includes/home/en_home_page_text.html
+++ b/web_service/templates/includes/home/en_home_page_text.html
@@ -1,35 +1,32 @@
-<br>
-We will find the best way to repay the debt
-<br>
-We are confident that through dialogue it is easier to find the optimal solution to your financial situation. You decide how, when and how much you invest in paying off your obligations. The main thing is to trust us.
-<br>
-<br>
-
-About us in brief
-<br>
-LLC "Collection Bureau "Marshal", created by professionals in the field of collection of overdue debts and uses the best collection practices from world leaders based on the study of many years of experience in the industry.
-The work of the bureau covers the entire range of services within the full cycle of work with the collection of bad debts, from the prevention of overdue debts to enforcement proceedings.
-LLC "Collection Bureau "Marshal" strives to become a good example of a civilized settlement of situations of overdue debts.
-We restore the balance of interests of all participants in the financial system - we try to resolve the issue of overdue debt with the greatest profit for the creditor and with the least loss for the debtor. Our financial services professionals are constantly helping consumers resolve their problems and restore the trust of creditors.
-Our work is carried out exclusively within the legal framework of Russia.
-<br>
-<br>
-
-Our services
-<ul>
-  <li>Pre-trial settlement</li>
-  <li>Claim proceedings</li>
-  <li>Representation of interests at the stage of bankruptcy</li>
-  <li>Mandatory production</li>
-</ul>
-<br>
-<br>
-
-Why exactly us?
-<br>
-Why is it worth contacting LLC "Collection Bureau "Marshal"
-<ul>
-<li>Guarantee of compliance with the legislation of the Russian Federation when collecting debts</li>
-<li>Security and confidentiality when handling and throughout the entire cycle of work</li>
-<li>Only professional experienced staff</li>
-</ul>
+<div class="home-content">
+  <h2 class="home-title">
+    We will find the best way to repay the debt
+  </h2>
+  <p class="home-descr">We are confident that through dialogue it is easier to find the optimal solution to your financial situation. You decide how, when and how much you invest in paying off your obligations. The main thing is to trust us.
+  </p>
+  <h3 class="home-subtitle">About us in brief</h3>
+  <p class="home-descr">LLC "Collection Bureau "Marshal", created by professionals in the field of collection of overdue debts and uses the best collection practices from world leaders based on the study of many years of experience in the industry.
+  </p>
+  <p class="home-descr">The work of the bureau covers the entire range of services within the full cycle of work with the collection of bad debts, from the prevention of overdue debts to enforcement proceedings.
+  </p>
+  <p class="home-descr">LLC "Collection Bureau "Marshal" strives to become a good example of a civilized settlement of situations of overdue debts.
+  </p>
+  <p class="home-descr">We restore the balance of interests of all participants in the financial system - we try to resolve the issue of overdue debt with the greatest profit for the creditor and with the least loss for the debtor. Our financial services professionals are constantly helping consumers resolve their problems and restore the trust of creditors.
+  </p>
+  <p class="home-descr">Our work is carried out exclusively within the legal framework of Russia.
+  </p>
+  <h3 class="home-subtitle">Our services</h3>
+  <ul class="home-list">
+    <li class="home-item">Pre-trial settlement</li>
+    <li class="home-item">Claim proceedings</li>
+    <li class="home-item">Representation of interests at the stage of bankruptcy</li>
+    <li class="home-item">Mandatory production</li>
+  </ul>
+  <h3 class="home-subtitle">Why exactly us?</h3>
+  <p class="home-descr">Why is it worth contacting LLC "Collection Bureau "Marshal"</p>
+  <ul class="home-list home-list-2">
+    <li class="home-item">Guarantee of compliance with the legislation of the Russian Federation when collecting debts</li>
+    <li class="home-item">Security and confidentiality when handling and throughout the entire cycle of work</li>
+    <li class="home-item">Only professional experienced staff</li>
+  </ul>
+</div>
