--- a/web_service/templates/account/profile.j2
+++ b/web_service/templates/account/profile.j2
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-  <div class="section-account">
+  <div class="section-account flex">
       {% include "account/navigation.j2" %}
-      <div class="section-content">
-        <div class="profile">
+      <div class="section-content flex">
+        <div class="profile flex">
           <form class="form profile-form" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="row flex">
