--- a/web_service/templates/services/FSSP/fssp_service.j2
+++ b/web_service/templates/services/FSSP/fssp_service.j2
@@ -2,8 +2,7 @@
 
 {% block content %}
   <br>
-  <br>
-  <br>
-  <br>
-  <h2 style="color: red; text-align: center">{{ logic_in_dev }}</h2>
+  {% include "includes/messages.j2" %}
+
+  {% include "includes/services/file_verification.j2" %}
 {% endblock %}
