--- a/web_service/static/css/style.css
+++ b/web_service/static/css/style.css
@@ -1123,6 +1123,14 @@ body {
   }
 }
 
+.loader {
+  display: inline-block;
+}
+
+.loader .bar1-bar12 {
+  margin-top: 15px;
+}
+
 .loader .bar1 {
   transform: rotate(0deg) translate(0, -130%);
   animation-delay: 0s;
@@ -1183,3 +1191,135 @@ body {
   animation-delay: -0.1s;
 }
 
+.input__wrapper {
+  width: 100%;
+  position: relative;
+  margin: 15px 0;
+  text-align: center;
+}
+
+.form-input__file {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+}
+
+.form-input__file-button-text {
+  line-height: 1;
+  margin-top: 1px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.input__file-icon-wrapper {
+  height: 30px;
+  width: 60px;
+  margin-right: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.form-input__file-button {
+  width: 300px;
+  height: 35px;
+  padding-left: 15px;
+  text-align: center;
+  outline: 2px solid var(--grey);
+  border-radius: 8px;
+  margin-bottom: 10px;
+  color: var(--light-grey);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  cursor: pointer;
+}
+
+.field__wrapper {
+  width: 100%;
+  position: relative;
+  margin: 15px 0;
+  text-align: center;
+}
+
+.field__file {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+}
+
+.field__file-wrapper {
+  width: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.field__file-fake {
+  height: 35px;
+  width: calc(100% - 130px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 8px;
+  border: 2px solid var(--grey);
+  border-radius: 8px 0 0 8px;
+  border-right: none;
+}
+
+.field__file-button {
+  width: 130px;
+  height: 35px;
+  background: var(--light-light-grey);
+  color: var(--light-grey);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 2px solid var(--grey);
+  border-radius: 0 8px 8px 0;
+  cursor: pointer;
+}
+
+.field__file-button:focus {
+  outline: none;
+  background-color: var(--light-light-grey);
+}
+
+.field__file-button:hover {
+  color: rgba(135, 147, 154);
+  background-color: rgba(60, 63, 65);
+}
+
+.field__file-button:active {
+  color: var(--black);
+  background-color: var(--grey);
+}
