--- a/web_service/static/css/style.css
+++ b/web_service/static/css/style.css
@@ -1127,75 +1127,82 @@ body {
   display: inline-block;
 }
 
-.loader .bar1-bar12 {
-  margin-top: 15px;
-}
-
 .loader .bar1 {
   transform: rotate(0deg) translate(0, -130%);
   animation-delay: 0s;
+  margin-top: 10px;
 }
 
 .loader .bar2 {
   transform: rotate(30deg) translate(0, -130%);
   animation-delay: -1.1s;
+  margin-top: 10px;
 }
 
 .loader .bar3 {
   transform: rotate(60deg) translate(0, -130%);
   animation-delay: -1s;
+  margin-top: 10px;
 }
 
 .loader .bar4 {
   transform: rotate(90deg) translate(0, -130%);
   animation-delay: -0.9s;
+  margin-top: 10px;
 }
 
 .loader .bar5 {
   transform: rotate(120deg) translate(0, -130%);
   animation-delay: -0.8s;
+  margin-top: 10px;
 }
 
 .loader .bar6 {
   transform: rotate(150deg) translate(0, -130%);
   animation-delay: -0.7s;
+  margin-top: 10px;
 }
 
 .loader .bar7 {
   transform: rotate(180deg) translate(0, -130%);
   animation-delay: -0.6s;
+  margin-top: 10px;
 }
 
 .loader .bar8 {
   transform: rotate(210deg) translate(0, -130%);
   animation-delay: -0.5s;
+  margin-top: 10px;
 }
 
 .loader .bar9 {
   transform: rotate(240deg) translate(0, -130%);
   animation-delay: -0.4s;
+  margin-top: 10px;
 }
 
 .loader .bar10 {
   transform: rotate(270deg) translate(0, -130%);
   animation-delay: -0.3s;
+  margin-top: 10px;
 }
 
 .loader .bar11 {
   transform: rotate(300deg) translate(0, -130%);
   animation-delay: -0.2s;
+  margin-top: 10px;
 }
 
 .loader .bar12 {
   transform: rotate(330deg) translate(0, -130%);
   animation-delay: -0.1s;
+  margin-top: 10px;
 }
 
 .input__wrapper {
   width: 100%;
   position: relative;
   margin: 15px 0;
-  text-align: center;
 }
 
 .form-input__file {
@@ -1205,12 +1212,33 @@ body {
 }
 
 .form-input__file-button-text {
+  display: block;
   line-height: 1;
-  margin-top: 1px;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: center;
+  justify-content: center;
 }
 
+.form-input__file-button {
+  width: 300px;
+  height: 35px;
+  outline: 2px solid var(--grey);
+  border-radius: 8px;
+  margin-bottom: 10px;
+  color: var(--light-grey);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+  cursor: pointer;
+}
+/*
 .input__file-icon-wrapper {
   height: 30px;
   width: 60px;
@@ -1224,27 +1252,6 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.form-input__file-button {
-  width: 300px;
-  height: 35px;
-  padding-left: 15px;
-  text-align: center;
-  outline: 2px solid var(--grey);
-  border-radius: 8px;
-  margin-bottom: 10px;
-  color: var(--light-grey);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  cursor: pointer;
 }
 
 .field__wrapper {
@@ -1320,6 +1327,5 @@ body {
 }
 
 .field__file-button:active {
-  color: var(--black);
-  background-color: var(--grey);
-}
+  color: var(--grey);
+}/*
